crates/sui-graphql-macros/tests/compile/type_validation_option_vec_without_question_mark.rs
use sui_graphql_macros::Response;

#[derive(Response)]
struct R {
    #[field(path = "checkpoints.nodes[].digest")]
    digests: Option<Vec<String>>,
}

fn main() {}
